minor modifications in hydra-centaurus-test-contamination.ipynb and defining-hydra-centaurus.ipynb

--- a/defining-hydra-centaurus.ipynb
+++ b/defining-hydra-centaurus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f21e5a1f",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from astropy import units as u\n",
+    "from astropy.coordinates import Angle\n",
     "import seaborn as sns; sns.set()\n",
     "sns.set_style(\"dark\")"
    ]
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "e8e6d7f5",
    "metadata": {},
    "outputs": [
@@ -66,9 +68,6 @@
     }
    ],
    "source": [
-    "from astropy import units as u\n",
-    "from astropy.coordinates import Angle\n",
-    "\n",
     "ra_1 = Angle(140, u.degree)\n",
     "ra_2 = Angle(185, u.degree) #I chose 185 because there is not S-PLUS data beyond that for Hydra-Centaurus\n",
     "dec_1 = Angle(-50, u.degree)\n",
@@ -76,6 +75,26 @@
     "\n",
     "print(\"{:.5f} <= R.A. <= {:.5f}\".format(ra_1.hour, ra_2.hour))\n",
     "print(\"{} <= DEC. <= {}\".format(dec_1.dms, dec_2.dms))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "43402404",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hms_tuple(h=11.0, m=47.0, s=40.80000000000467)\n"
+     ]
+    }
+   ],
+   "source": [
+    "angle = 176.92\n",
+    "angle = Angle(angle, u.degree)\n",
+    "print(\"{}\".format(angle.hms))"
    ]
   },
   {
